--- a/Keywords-Generator.ipynb
+++ b/Keywords-Generator.ipynb
@@ -113,11 +113,11 @@
     "\"Data Structures\",\n",
     "\"Discrete Mathematics\",\n",
     "\"Hacking\",\n",
-    "\"Quantum Computing - 5\",\n",
-    "\"Robotics - 1\",\n",
-    "\"Engineering Practices - 0\",\n",
-    "\"Software Tools - 0 \",\n",
-    "\"Mathematical Logic - 0 \",\n",
+    "\"Quantum Computing\",\n",
+    "\"Robotics\",\n",
+    "\"Engineering Practices\",\n",
+    "\"Software Tools\",\n",
+    "\"Mathematical Logic\",\n",
     "\"Graph Theory\",\n",
     "\"Computational Geometry\",\n",
     "\"Algorithms\",\n",
