--- a/Keywords-Generation-From-PDF-File.ipynb
+++ b/Keywords-Generation-From-PDF-File.ipynb
@@ -357,7 +357,7 @@
     "    Return\n",
     "      A list of five words that have highest occurences \n",
     "    '''\n",
-    "    text = readPDF(url)\n",
+    "    text = readPDF(url).lower()\n",
     "    occ = countKeywords(text, keywords)\n",
     "\n",
     "    # get a list of top 5 words\n",
