--- a/Keywords-Generation-From-PDF-File.ipynb
+++ b/Keywords-Generation-From-PDF-File.ipynb
@@ -35,10 +35,10 @@
     "# Connect with database\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "DB_NAME = ''\n",
-    "COLLECTION_NAME = ''\n",
+    "DB_NAME = 'TechVault'\n",
+    "COLLECTION_NAME = 'blogs'\n",
     "\n",
-    "mongo_uri = \"mongodb+srv://gift:t@cluster0.kf3n4.mongodb.net/{}?authSource=admin&ssl=true\".format(DB_NAME)\n",
+    "mongo_uri = \"\"\n",
     "client = MongoClient(mongo_uri)\n",
     "\n",
     "# Database: TechVault\n",
