Added Paper-Keywords-Generation.ipynb file

--- a/Paper-Keywords-Generation.ipynb
+++ b/Paper-Keywords-Generation.ipynb
@@ -32,10 +32,10 @@
     "# Connect with database\n",
     "from pymongo import MongoClient\n",
     "\n",
-    "DB_NAME = 'TechVault'\n",
-    "COLLECTION_NAME = 'blogs'\n",
+    "DB_NAME = ''\n",
+    "COLLECTION_NAME = ''\n",
     "\n",
-    "mongo_uri = \"mongodb+srv://gift:t@cluster0.kf3n4.mongodb.net/{}?authSource=admin&ssl=true\".format(DB_NAME)\n",
+    "mongo_uri = \"\".format(DB_NAME)\n",
     "client = MongoClient(mongo_uri)\n",
     "\n",
     "# Database: TechVault\n",
